WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249645
Images are not drawn even after they are completely loaded from a slow server
https://bugs.webkit.org/show_bug.cgi?id=249645
Summary
Images are not drawn even after they are completely loaded from a slow server
siim
Reported
2022-12-20 05:38:35 PST
Created
attachment 464116
[details]
Example 1 There are tons of issues with iOS 16 Safari rendering Leaflet map (
https://leafletjs.com/
) Most bugs happen when map is more complicated or images are bigger than usual. One example where map does not render, but needs visibility change or zoom in for re-render. 1. Open
https://gis.ee/vfr/
2. See gray background. 3. Change app or go to home screen. 4. Re open safari 5. Map image appears. 1. Open
https://gis.ee/vfr/
2. See gray background. 3. Press Zoom-In button. 4. Map image appears. Example map image is 16MB. Works in every other browser in desktop. Works even in cheapest android. So performance is not an issue. Does not work in any iOS browser/webview.
Attachments
Example 1
(12.45 MB, video/mp4)
2022-12-20 05:38 PST
,
siim
no flags
Details
Example 2
(14.85 MB, video/mp4)
2022-12-20 05:39 PST
,
siim
no flags
Details
Another rendering error on top right corner.
(918.54 KB, image/png)
2022-12-20 05:46 PST
,
siim
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
siim
Comment 1
2022-12-20 05:39:00 PST
Created
attachment 464117
[details]
Example 2
siim
Comment 2
2022-12-20 05:40:59 PST
There was no issue in early iOS 15 or previous iOS versions. So it iOS 15.x+ and iOS 16+ issue.
siim
Comment 3
2022-12-20 05:43:14 PST
When big image file is cached, then there is no bug and rendering is working correctly.
siim
Comment 4
2022-12-20 05:46:45 PST
Created
attachment 464118
[details]
Another rendering error on top right corner.
Simon Fraser (smfr)
Comment 5
2022-12-20 09:48:30 PST
Page uses a giant image. I think this is probably about not getting subsampling when rendering images for the GPU Process.
Radar WebKit Bug Importer
Comment 6
2022-12-20 09:48:56 PST
<
rdar://problem/103560731
>
siim
Comment 7
2023-01-07 13:05:45 PST
Any progress? Most powerful phone in the world cannot handle 16MB image? What a joke!
siim
Comment 8
2023-01-09 13:44:52 PST
(In reply to Simon Fraser (smfr) from
comment #5
)
> Page uses a giant image. I think this is probably about not getting > subsampling when rendering images for the GPU Process.
So where is the fix???
Said Abou-Hallawa
Comment 9
2023-01-19 16:29:11 PST
(In reply to siim from
comment #7
)
> Any progress? > > Most powerful phone in the world cannot handle 16MB image? > > What a joke!
I opened
https://gis.ee/vfr/
on iPad The page has this image:
https://gis.ee/vfr/VFR_2022_map.png
. This image was not displayed. The dimension of this image is: 7,717 x 5,355 pixels The size of this image = 7,717 x 5,355 x 4 = 165,298,140 bytes = 165MB
Said Abou-Hallawa
Comment 10
2023-01-19 16:33:30 PST
The 165MB is the size of the decoded image. And we have to cache the encoded image (the image file which is downloaded from the internet) also which is 16MB. So the total memory to display this image = 165 + 16 = 181MB.
siim
Comment 11
2023-01-21 08:23:46 PST
So most powerful phone cannot handle this? It worked fine in previous first releases of 15 and 14... Maybe start working and fix thing instead of breaking iOS Safari all the time?
siim
Comment 12
2023-01-21 08:25:30 PST
It is already over month of your first reply. $3 Trillion company but cannot fix simple bugs in one month?
siim
Comment 13
2023-01-21 08:35:08 PST
Anyway I tested it in 15 year old PC with IE. No problem for IE... I guess you can do better than scrapped IE. Maybe in the future.
siim
Comment 14
2023-01-24 12:59:42 PST
iOS 16.3 still not fixed
Myles C. Maxfield
Comment 15
2023-02-01 15:33:54 PST
> What a joke!
> So where is the fix???
> Maybe start working and fix thing instead of breaking iOS Safari all the time?
> $3 Trillion company but cannot fix simple bugs in one month?
> I guess you can do better than scrapped IE. Maybe in the future.
Please be respectful. These kinds of comments do not help this bug get fixed. If these kinds of comments continue, we will be forced to ban this account.
siim
Comment 16
2023-02-01 23:49:50 PST
Ban and delete ticket. Easiest bugfix ever.
siim
Comment 17
2023-02-14 00:19:02 PST
iOS 16.3.1 still not fixed. 16mb is still too much for greatest and most powerful phone in the world.
siim
Comment 18
2023-03-27 13:10:06 PDT
Still broken in 16.4... Is there any way to downgrade to iOS 15.0 where it worked fine? Great hardware but subpar quality software...
Said Abou-Hallawa
Comment 19
2023-04-09 17:30:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12555
EWS
Comment 20
2023-04-18 11:05:36 PDT
Committed
263085@main
(b56577295e3d): <
https://commits.webkit.org/263085@main
> Reviewed commits have been landed. Closing PR #12555 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug